# ngp-encode-server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: camera.h  common.h  encode.h  encode_text.h  muxing.h  pov.h  server.h  webrtc.h  wsserver.h
include/base/: camera.h  camera_manager.h  logging.h  scoped_timer.h
include/base/exceptions/: lock_timeout.h
include/base/server/: camera_control.h  packet_stream.h  websocket_server.h
include/base/video/: frame_map.h  frame_queue.h  render_text.h  rendered_frame.h  type_managers.h
include/streamer/: ffmpegstreamsource.hpp  fileparser.hpp  h264fileparser.hpp  main.hpp  opusfileparser.hpp  stream.hpp
proto/: CMakeLists.txt  nes.proto
src/: camera.cpp  encode.cpp  encode_text.cpp  main.cpp  muxing.cpp  pov.cpp  server.cpp  webrtc.cpp
src/base/: camera_manager.cc
src/base/server/: camera_control.cc  packet_stream.cc  websocket_server.cc
src/base/video/: frame_map.cc  frame_queue.cc  render_text.cc  rendered_frame.cc  type_managers.cc
src/streamer/: dispatchqueue.cpp  ffmpegstreamsource.cpp  fileparser.cpp  h264fileparser.cpp  helpers.cpp  main.cpp  main2.cpp  opusfileparser.cpp  stream.cpp
